--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=hello-spring
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.username=sa
 spring.datasource.driver-class-name=org.h2.Driver
+
+spring.jpa.show-sql=ture
+spring.jpa.hibernate.ddl-auto=none
